# zenbild-core

./: .env.examples  .gitignore  README.md  package.json  pnpm-lock.yaml  vercel.json
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: db.py  main.py  pyproject.toml
backend/app/app/: main.py
backend/app/models/: __init__.py  project.py  user.py
backend/app/routers/: __init__.py  auth_magic.py  projects.py
frontend/: README.md  package.json
frontend/nextjs-app/: package.json
frontend/src/app/: layout.tsx  middleware.ts  page.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[id]/: page.tsx  project-client.tsx  upload.tsx
frontend/src/components/: project-creation-flow.tsx
frontend/src/lib/: api.ts
